--- a/.env
+++ b/.env
@@ -3,8 +3,13 @@ DEBUG=True
 PORT=5000
 
 # Mock API keys (replace with real ones later)
-OPENWEATHER_API_KEY=your_api_key_here
-GOOGLE_CLOUD_PROJECT=your_project_id
+OPENWEATHER_API_KEY=49392c9735ad457ed6e1de19fdf41176
+# Google Cloud Configuration
+GOOGLE_CLOUD_PROJECT=your-gcp-project-id
+GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account.json
 
-# Local testing URLs
-FRONTEND_URL=http://localhost:3000
+FLASK_ENV=development
+
+# Online Boutique Service URLs (for GKE deployment)
+PRODUCT_CATALOG_SERVICE_URL=http://productcatalogservice:3550
+
