Fix: ai_agent indentation and ProductService init

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ PORT=5000
 # Mock API keys (replace with real ones later)
 OPENWEATHER_API_KEY=49392c9735ad457ed6e1de19fdf41176
 # Google Cloud Configuration
-GOOGLE_CLOUD_PROJECT=your-gcp-project-id
-GOOGLE_APPLICATION_CREDENTIALS=path/to/your/service-account.json
+GOOGLE_CLOUD_PROJECT=sincere-etching-472314-g0
+GOOGLE_APPLICATION_CREDENTIALS="C:\Users\MicroZaib\Downloads\sincere-etching-472314-g0-d85abd15759b.json"
 
 FLASK_ENV=development
 
